source/stylesheets/components/_navigation.scss
nav, [role=navigation] {
  ul {
    list-style: none;
    padding: 0;
    margin: 0 auto;
  }
}

[role=navigation] {
  float: right;

  ul {
    text-align: center;
  }

  li {
    display: inline;
    padding: 0 15px 40px;
  }

  a {
    transition: color .25s $easing;
    color: $white;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: .075em;
    display: inline-block;
    line-height: 100px;

    &:hover {
      color: $button-color;
    }
  }
}

